adicionando estilos a pagina sobre.html

--- a/styles/sobre.css
+++ b/styles/sobre.css
@@ -1,8 +1,7 @@
 .titulo {
-    border-bottom: solid black 1px;   
+    border-bottom: solid black 1px;
+    color: red;
 }
-
 .logoMarca {
-    width: 100px;
-    height: 100px;
+  margin-top: 4px;
 }
