--- a/components/header.html
+++ b/components/header.html
@@ -5,18 +5,29 @@
     <link href="../styles/sobre.css" rel="stylesheet" type="text/css">
     <link href="../styles/main.css" rel="stylesheet" type="text/css">
     <meta charset="utf-8">
-    <title></title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   </head>
+  <body>
     <header>
+      <ul id="dropdown1" class="dropdown-content">
+        <li><a href="#!">Login</a></li>
+        <li class="divider"></li>
+        <li><a href="#!">Cadastre-se</a></li>
+      </ul>
       <nav>
         <div class="nav-wrapper">
-          <a href="#" class="brand-logo">Kapich</a>
-          <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="../index.html">Home</a></li>
+          <a href="#!" class="brand-logo">Kapich</a>
+          <ul class="right hide-on-med-and-down">
+            <li><a href="sass.html">Sass</a></li>
             <li><a href="badges.html">Components</a></li>
-            <li><a href="collapsible.html">JavaScript</a></li>
+            <!-- Dropdown Trigger -->
+            <li><a class="dropdown-trigger dropdown-header" href="#!" data-target="dropdown1">Usuário<i class="material-icons right">arrow_drop_down</i></a></li>
           </ul>
         </div>
       </nav>
     </header>
+    </body>
+    <script src="../scripts/sobre.js"></script>
+    <script src="../plugins/materialize/js/materialize.js"></script>
 </html>
