so mudei o nome da funcao

--- a/components/header.html
+++ b/components/header.html
@@ -23,7 +23,7 @@
             <div class="input-field left">
               <input id="search" type="search" required>
               <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-              <i class="material-icons" onclick="removePesquisa()">close</i>
+              <i class="material-icons" onclick="removeTextoPesquisa()">close</i>
             </div>
             <ul class="right hide-on-med-and-down">
               <li><a href="sass.html">Sass</a></li>
