criado newsletter no footer, criado funcao para validacao de email e feito ajustes no layout

--- a/components/header.html
+++ b/components/header.html
@@ -21,7 +21,7 @@
           <a href="../pages/sobre.html" target="_top" class="brand-logo">Kapich</a>
           <form>
             <div class="input-field left">
-              <input id="search" type="search" required>
+              <input id="search" type="search" required placeholder="Digite o que procura :)">
               <label class="label-icon" for="search"><i class="material-icons">search</i></label>
               <i class="material-icons" onclick="removeTextoPesquisa()">close</i>
             </div>
