--- a/components/footer.html
+++ b/components/footer.html
@@ -1,22 +1,34 @@
-<!DOCTYPE html>
-<html lang="pt-br">
   <head>
     <link href="../plugins/materialize/css/materialize.min.css" rel="stylesheet" type="text/css">
     <link href="../styles/sobre.css" rel="stylesheet" type="text/css">
     <link href="../styles/main.css" rel="stylesheet" type="text/css">
     <link href="../styles/footer.css" rel="stylesheet" type="text/css">
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   </head>
-  <body>
     <footer class="page-footer">
         <div class="container">
-          <div class="row">
+          <div class="row infos-footer">
             <div class="col l6 s12">
               <h5 class="white-text"><em>Acompanhe-nos:</em></h5>
               <div class="col s1"><a href="#"> <img class="resposive-img circle img-tam" src="http://cinema.iecps.com.br/wp-content/uploads/2016/08/facebook-icon-transparent-background.png" alt="Icone do Facebook"></div>
               <div class="col s1"><a href="#"> <img class="resposive-img circle img-tam" src="http://cinema.iecps.com.br/wp-content/uploads/2016/08/Instagram_App_Large_May2016_200.png" alt="Icone do Instagram"></a></div>
             </div>
-            <div class="col l4 offset-l2 s12">
+            <div class="newsletter">
+              <h5 class="white-text texto-newsletter"><em>Cadastre-se e fique por dentro</em></h5>
+              <form class="col s12">
+                  <div class="input-field col s12">
+                    <input id="email" type="email" class="validate" placeholder="Email">
+                    <!-- <label class="white-text" for="email">Email</label> -->
+                    <!-- <span class="helper-text" data-error="Email invalido!" data-success="Email cadastrado com sucesso!"></span> -->
+                  </div>
+                  <button class="btn waves-effect waves-light botao-newsletter" type="submit" onclick="submitNewsletter()" name="action">Submit
+                    <i class="material-icons right">send</i>
+                  </button>
+              </form>
+            </div>
+            <div class="col l4 offset-l2 s12 links">
               <h5 class="white-text"><em>Links</em></h5>
               <ul>
                 <li><a class="grey-text text-lighten-3" href="#!">Quem Somos</a></li>
@@ -27,12 +39,11 @@
           </div>
         </div>
         <div class="footer-copyright">
-          <div class="container">
+          <div class="container left">
           © 2019 Bruno Testolin, Guilherme Portigliotti, João Malvesti
           <a class="grey-text text-lighten-4 right" href="#!">Nosso Blog</a>
           </div>
         </div>
       </footer>
       <script src="../plugins/materialize/js/materialize.js"></script>
-      </body>
-</html>
+      <script src="../scripts/newsletter.js"></script>
