--- a/components/header.html
+++ b/components/header.html
@@ -12,13 +12,13 @@
   <body>
     <header>
       <ul id="dropdown1" class="dropdown-content">
-        <li class="red lighten-2"><a href="../pages/login.html" target="_top" class="white-text">Login</a></li>
+        <li class="black lighten-2"><a href="../pages/login.html" target="_top" class="white-text cacetada">Login</a></li>
         <li class="divider"></li>
-        <li class="red lighten-2"><a href="../pages/cadastroUsuario.html" target="_top" class="white-text">Cadastre-se</a></li>
+        <li class="black lighten-2"><a href="../pages/cadastroUsuario.html" target="_top" class="white-text cacetada">Cadastre-se</a></li>
       </ul>
       <nav>
         <div class="nav-wrapper">
-          <a href="../pages/sobre.html" target="_top" class="brand-logo">Kapich</a>
+          <a href="../index.html" target="_top" class="brand-logo">Kapich</a>
           <form>
             <div class="input-field left">
               <input id="search" type="search" required placeholder="Digite o que procura :)">
