adicionado banner e uma das secoes a pagina

--- a/components/footer.html
+++ b/components/footer.html
@@ -33,7 +33,7 @@
             <div class="col l4 offset-l2 s12 links">
               <h5 class="white-text"><em>Links</em></h5>
               <ul>
-                <li><a class="grey-text text-lighten-3" href="#">Quem Somos</a></li>
+                <li><a class="grey-text text-lighten-3" target="_top" href="../pages/sobre.html">Quem Somos</a></li>
                 <li><a class="grey-text text-lighten-3" href="#">Nossas Lojas</a></li>
                 <li><a class="grey-text text-lighten-3" href="#">Localização</a></li>
               </ul>
