ajuste de layout e inicio das secoes

--- a/components/footer.html
+++ b/components/footer.html
@@ -13,8 +13,9 @@
             <div class="col l6">
               <h5 class="white-text acompanhe"><em>Acompanhe-nos:</em></h5>
               <div class="icones-rede-social">
-                <div class="col s1"><a href="#"> <img class="resposive-img circle img-tam" src="http://cinema.iecps.com.br/wp-content/uploads/2016/08/facebook-icon-transparent-background.png" alt="Icone do Facebook"></div>
-                <div class="col s1"><a href="#"> <img class="resposive-img circle img-tam" src="http://cinema.iecps.com.br/wp-content/uploads/2016/08/Instagram_App_Large_May2016_200.png" alt="Icone do Instagram"></div>
+                <div class="col s1"><a href="#"> <img class="resposive-img circle img-tam" src="../images/facebook.svg" alt="Icone do Facebook"></div>
+                <div class="col s1"><a href="#"> <img class="resposive-img circle img-tam" src="../images/instagram.svg" alt="Icone do Instagram"></div>
+                <div class="col s1"><a href="#"> <img class="resposive-img circle img-tam" src="../images/youtube.svg" alt="Icone do YouTube"></div>
               </div>
               </div>
             <div class="newsletter">
