ajustes no banner da home

--- a/styles/main.css
+++ b/styles/main.css
@@ -18,6 +18,10 @@ p {
     width: 100%;
 }
 
+section .cabecalho {
+  margin-bottom: -92px;
+}
+
 .img-tam {
   width: 100%;
 }
@@ -78,10 +82,6 @@ input.invalid:not([type]), input.invalid:not([type]):focus, input.invalid[type=t
     box-shadow: 0 1px 0 0 black;
 }
 
-.slider {
-  margin-top: -92px;
-  z-index: -9;
-}
 .title-maisVendidos {
   margin-left: 43px;
   font-size: 2.2em;
@@ -90,4 +90,9 @@ input.invalid:not([type]), input.invalid:not([type]):focus, input.invalid[type=t
 .section-maisVendidos {
   width: 20em;
   margin-left: 3em;
+}
+
+.fakeImg {
+    background: no-repeat center;
+    background-size: cover;
 }
