--- a/components/footer.html
+++ b/components/footer.html
@@ -15,7 +15,7 @@
               <div class="icones-rede-social">
                 <div class="col s1"><a href="#"> <img class="resposive-img circle img-tam" src="../images/facebook.svg" alt="Icone do Facebook"></div>
                 <div class="col s1"><a href="#"> <img class="resposive-img circle img-tam" src="../images/instagram.svg" alt="Icone do Instagram"></div>
-                <div class="col s1"><a href="#"> <img class="resposive-img circle img-tam" src="../images/youtube.svg" alt="Icone do YouTube"></div>
+                <div class="col s1"><a href="#"> <img class="resposive-img circle img-tam" src="../images/youtube.png" alt="Icone do YouTube"></div>
               </div>
               </div>
             <div class="newsletter">
