--- a/components/footer.html
+++ b/components/footer.html
@@ -43,7 +43,7 @@
         </div>
         <div class="footer-copyright">
           <div class="container left">
-          © 2019 Bruno Testolin, Guilherme Portigliotti, João Malvesti
+          © 2019 Bruno Testolin, Guilherme Portigliotti, João Malvesti, Flávio Milani
           <a class="grey-text text-lighten-4 right" href="#">Nosso Blog</a>
           </div>
         </div>
