--- a/components/header.html
+++ b/components/header.html
@@ -8,14 +8,25 @@
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
   </head>
   <body>
     <header>
+      
       <ul id="dropdown1" class="dropdown-content">
         <li class="black lighten-2"><a href="../pages/login.html" target="_top" class="white-text cacetada">Login</a></li>
         <li class="divider"></li>
         <li class="black lighten-2"><a href="../pages/cadastroUsuario.html" target="_top" class="white-text cacetada">Cadastre-se</a></li>
       </ul>
+
+      <ul id="dropdownUser" class="dropdown-content">
+          <li class="black lighten-2"><a href="#" target="_top" class="white-text cacetada">Meus Dados</a></li>
+          <li class="divider"></li>
+          <li class="black lighten-2"><a href="#" target="_top" class="white-text cacetada">Meus Pedidos</a></li>
+          <li class="divider"></li>
+          <li class="black lighten-2"><a href="#" target="_top" class="white-text cacetada">Sair</a></li>
+        </ul>
+                
       <nav>
         <div class="nav-wrapper">
           <a href="../index.html" target="_top" class="brand-logo">Kapich</a>
@@ -29,7 +40,12 @@
               <li><a href="sass.html">Sass</a></li>
               <li><a href="badges.html">Components</a></li>
               <!-- Dropdown Trigger -->
-              <li><a class="dropdown-trigger dropdown-header" href="#" data-target="dropdown1">Usuário<i class="material-icons right">arrow_drop_down</i></a></li>
+              <li id="menuNLogado"><a class="dropdown-trigger dropdown-header" href="#" data-target="dropdown1">Usuário<i class="material-icons right">arrow_drop_down</i></a></li>
+              <ul class="right" id="menuLogado" hidden>
+                  <li><a href="#"><i class="material-icons icon-menu">shopping_cart</i></a></li>
+                  <li><a href="#"><i class="material-icons icon-menu">notifications</i></a></li>
+                  <li><a href="#!" class="dropdown-trigger" data-target="dropdownUser"><i class="material-icons icon-menu">person</i></a></li>
+              </ul>
             </ul>
           </form>
         </div>
@@ -39,4 +55,19 @@
     <script src="../scripts/sobre.js"></script>
     <script src="../scripts/search.js"></script>
     <script src="../plugins/materialize/js/materialize.js"></script>
+    <script src="../scripts/Controllers/TokenController.js"></script>
+    <script>
+      $('document').ready(function(){
+        let tokenController = new TokenController();
+        console.log(tokenController.getTokenInSession());
+        console.log(sessionStorage.getItem('email'));
+        if(tokenController.getTokenInSession() != '' && sessionStorage.getItem('email') != null){
+          $('#menuLogado').attr('hidden', false);
+          $('#menuNLogado').attr('hidden', true);
+        }else{
+          tokenController.requestToken();
+        }
+        
+      });
+    </script>
 </html>
