--- a/components/header.html
+++ b/components/header.html
@@ -11,6 +11,11 @@
 
   </head>
   <body>
+      <ul id="dropdownUser" class="dropdown-content">
+          <li class="black lighten-1"><a href="#" class="white-text">Meus Dados</a></li>
+          <li class="divider" tabindex="-1"></li>
+          <li class="black lighten-1"><a href="#" onclick="LoginController.logout()" class="white-text">Sair</a></li>
+        </ul>
     <header>
       
       <ul id="dropdown1" class="dropdown-content">
@@ -18,15 +23,7 @@
         <li class="divider"></li>
         <li class="black lighten-2"><a href="../pages/cadastroUsuario.html" target="_top" class="white-text cacetada">Cadastre-se</a></li>
       </ul>
-
-      <ul id="dropdownUser" class="dropdown-content">
-          <li class="black lighten-2"><a href="#" target="_top" class="white-text cacetada">Meus Dados</a></li>
-          <li class="divider"></li>
-          <li class="black lighten-2"><a href="#" target="_top" class="white-text cacetada">Meus Pedidos</a></li>
-          <li class="divider"></li>
-          <li class="black lighten-2"><a href="#" target="_top" class="white-text cacetada">Sair</a></li>
-        </ul>
-                
+                            
       <nav>
         <div class="nav-wrapper">
           <a href="../index.html" target="_top" class="brand-logo">Kapich</a>
@@ -45,6 +42,7 @@
                   <li><a href="#"><i class="material-icons icon-menu">shopping_cart</i></a></li>
                   <li><a href="#"><i class="material-icons icon-menu">notifications</i></a></li>
                   <li><a href="#!" class="dropdown-trigger" data-target="dropdownUser"><i class="material-icons icon-menu">person</i></a></li>
+                  
               </ul>
             </ul>
           </form>
@@ -56,6 +54,7 @@
     <script src="../scripts/search.js"></script>
     <script src="../plugins/materialize/js/materialize.js"></script>
     <script src="../scripts/Controllers/TokenController.js"></script>
+    <script src="../scripts/Controllers/LoginController.js"></script>
     <script>
       $('document').ready(function(){
         let tokenController = new TokenController();
