Newsletter atualizada(API)

--- a/components/footer.html
+++ b/components/footer.html
@@ -49,4 +49,6 @@
         </div>
       </footer>
       <script src="../plugins/materialize/js/materialize.js"></script>
+      <script src="../scripts/Controllers/TokenController.js"></script>
       <script src="../scripts/newsletter.js"></script>
+      
