--- a/components/footer.html
+++ b/components/footer.html
@@ -36,7 +36,7 @@
               <ul>
                 <li><a class="grey-text text-lighten-3" target="_top" href="../pages/sobre.html">Quem Somos</a></li>
                 <li><a class="grey-text text-lighten-3" href="#">Nossas Lojas</a></li>
-                <li><a class="grey-text text-lighten-3" href="#">Localização</a></li>
+                <li><a class="grey-text text-lighten-3" href="https://goo.gl/maps/mdNz4TLnTAZjniDV7">Localização</a></li>
               </ul>
             </div>
           </div>
