--- a/styles/carrinho.css
+++ b/styles/carrinho.css
@@ -1,239 +1,105 @@
-$color-border: #eee;
-$color-label: #aaa;
-$font-default: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-$font-bold: 'HelveticaNeue-Medium', 'Helvetica Neue Medium';
-
-
-/* Global "table" column settings */
-.product-image { float: left; width: 20%; }
-.product-details { float: left; width: 37%; }
-.product-price { float: left; width: 12%; }
-.product-quantity { float: left; width: 10%; }
-.product-removal { float: left; width: 9%; }
-.product-line-price { float: left; width: 12%; text-align: right; }
-
-
-/* This is used as the traditional .clearfix class */
-.group:before,
-.group:after {
-    content: '';
-    display: table;
-} 
-.group:after {
-    clear: both;
-}
-.group {
-    zoom: 1;
+* {
+	font-size: 1em;
+	margin: 0;
+	padding: 0;
 }
 
-
-/* Apply clearfix in a few places */
-.shopping-cart, .column-labels, .product, .totals-item {
-  @extend .group;
-}
-
-
-/* Apply dollar signs */
-.product .product-price:before, .product .product-line-price:before, .totals-value:before {
-  content: '$';
-}
-
-
-/* Body/Header stuff */
 body {
-  padding: 0px 30px 30px 20px;
-  font-family: $font-default;
-  font-weight: 100;
+	font-family: Arial;
+	line-height: 1.4;
+	margin: 2em;
 }
 
-h1 {
-  font-weight: 100;
+h2 {
+	color: #444;
+	font-size: 2em;
+	margin: 1em 0;
 }
 
-label {
-  color: $color-label;
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+
+	background: #f5f5f5;
+	border: 1.5em solid #f5f5f5;
+	width: 100%;
 }
-
-.shopping-cart {
-  margin-top: -45px;
+thead {
+	font-weight: bold;
 }
-
-
-/* Column headers */
-.column-labels {
-  label {
-    padding-bottom: 15px;
-    margin-bottom: 15px;
-    border-bottom: 1px solid $color-border;
-  }
-  
-  .product-image, .product-details, .product-removal {
-    text-indent: -9999px;
-  }
+th {
+	padding: 0.75em;
+	border-bottom: 2px solid #ddd;
+	text-align: left;
 }
-
-
-/* Product entries */
-.product {
-  margin-bottom: 20px;
-  padding-bottom: 10px;
-  border-bottom: 1px solid $color-border;
-}
-  
-  .product-image {
-    text-align: left;
-      width: 10%;
-  }
-  
- .product-title {
-      margin-right: 20px;
-    }
-
-    .product-description {
-      margin: 5px 20px 5px 0;
-      line-height: 1.4em;
-    }
-  
-  .remove-product {
-    border: 0;
-    padding: 4px 8px;
-    background-color: #c66;
-    color: #fff;
-    font-family: $font-bold;
-    font-size: 12px;
-    border-radius: 3px;
-  }
-  
-  .remove-product:hover {
-    background-color: #a44;
-  }
+td {
+	padding: 0.75em;
+	border-bottom: 1px solid #ddd;
 }
 
 
-/* Totals section */
-.totals {
-  .totals-item {
-    float: right;
-    clear: both;
-    width: 100%;
-    margin-bottom: 10px;
-    
-    label {
-      float: left;
-      clear: both;
-      width: 79%;
-      text-align: right;
-    }
-    
-    .totals-value {
-      float: right;
-      width: 21%;
-      text-align: right;
-    }
-  }
-  
-  .totals-item-total {
-    font-family: $font-bold;
-  }
+.propaganda td {
+	background: #9F0;
+	padding: 1em 0.5em;
+	text-align: center;
+
+	color: #333;
+	font-style: italic;
 }
 
-.checkout {
-  float: right;
-  border: 0;
-  margin-top: 20px;
-  padding: 6px 25px;
-  background-color: #6b6;
-  color: #fff;
-  font-size: 25px;
-  border-radius: 3px;
+.hovering{
+	background: #CCC;
 }
 
-.checkout:hover {
-  background-color: #494;
+.recuperado {
+	background: #f5f5f5;
 }
 
-/* Make adjustments for tablet */
-@media screen and (max-width: 650px) {
-  
-  .shopping-cart {
-    margin: 0;
-    padding-top: 20px;
-    border-top: 1px solid $color-border;
-  }
-  
-  .column-labels {
-    display: none;
-  }
-  
-  .product-image {
-    float: right;
-    width: auto;
-    img {
-      margin: 0 0 10px 10px;
-    }
-  }
-  
-  .product-details {
-    float: none;
-    margin-bottom: 10px;
-    width: auto;
-  }
-  
-  .product-price {
-    clear: both;
-    width: 70px;
-  }
-  
-  .product-quantity {
-    width: 100px;
-    input {
-      margin-left: 20px;
-    }
-  }
-  
-  .product-quantity:before {
-    content: 'x';
-  }
-  
-  .product-removal {
-    width: auto;
-  }
-  
-  .product-line-price {
-    float: right;
-    width: 70px;
-  }
-  
+.remove-item {	
+	background: #F30;
+	border-radius: 2px;
+	color: white;
+	font-size: 0.7em;
+	text-decoration: none;
+	text-transform: uppercase;
+	
+	display: none;
+	padding: 0.5em;
 }
 
-
-/* Make more adjustments for phone */
-@media screen and (max-width: 350px) {
-  
-  .product-removal {
-    float: right;
-  }
-  
-  .product-line-price {
-    float: right;
-    clear: left;
-    width: auto;
-    margin-top: 10px;
-  }
-  
-  .product .product-line-price:before {
-    content: 'Item Total: $';
-  }
-  
-  .totals {
-    .totals-item {
-      label {
-        width: 60%;
-      }
-      
-      .totals-value {
-        width: 40%;
-      }
-    }
-  }
+.alterna-propaganda{
+	background: blue;
+	color: #EEE;
+	text-decoration: none;
+	padding: 15px;
+	font-weight: bold;
 }
+
+#mostra-propaganda{
+	background: green;
+	display: none;
+}
+
+input[type=button] {
+	background: #F90;
+	border: none;
+	color: #333;
+	text-transform: uppercase;
+
+	box-shadow: 0 1px 3px #777;
+	
+	display: block;
+	padding: 0.5em 1em;
+	margin: 1em 0;
+
+	-webkit-appearance: none;
+}
+
+.resumo {
+	background: #555;
+	color: white;
+	padding: 1.5em;
+	line-height: 2;
+	margin: 2em 0;
+}
+
