Revert "Criando banner carrinho"
This reverts commit ac9def37708bdef67648b3aaaf21113073fdf757.

--- a/components/header.html
+++ b/components/header.html
@@ -39,7 +39,7 @@
               <!-- Dropdown Trigger -->
               <li id="menuNLogado"><a class="dropdown-trigger dropdown-header" href="#" data-target="dropdown1">Usuário<i class="material-icons right">arrow_drop_down</i></a></li>
               <ul class="right" id="menuLogado" hidden>
-                  <li><a href="../pages/carrinhobanner.html"><i class="material-icons icon-menu">shopping_cart</i></a></li>
+                  <li><a href="#"><i class="material-icons icon-menu">shopping_cart</i></a></li>
                   <li><a href="#"><i class="material-icons icon-menu">notifications</i></a></li>
                   <li><a href="#!" class="dropdown-trigger" data-target="dropdownUser"><i class="material-icons icon-menu">person</i></a></li>
                   
